--- a/packages/vue-host/tsconfig.json
+++ b/packages/vue-host/tsconfig.json
@@ -16,6 +16,13 @@
     },
     "lib": ["ESNext", "DOM", "DOM.Iterable", "ScriptHost"]
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "tests/**/*.tsx"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx",
+    "types.d.ts"
+  ],
   "exclude": ["node_modules", "dist"]
 }
